@@ -23,8 +23,8 @@ ghostscript = ghostscript-$(ghostscript-version)
 $(ghostscript)-description = Interpreter for the PostScript language
 $(ghostscript)-url = https://www.ghostscript.com/
 $(ghostscript)-srcurl = https://github.com/ArtifexSoftware/ghostpdl-downloads/releases/download/gs9540/ghostscript-9.54.0.tar.gz
-$(ghostscript)-builddeps = $(fontconfig) $(freetype) $(libjpeg-turbo) $(libpng) $(libtiff) $(openjpeg) $(libpaper)
-$(ghostscript)-prereqs = $(fontconfig) $(freetype) $(libjpeg-turbo) $(libpng) $(libtiff) $(openjpeg) $(libpaper)
+$(ghostscript)-builddeps = $(fontconfig) $(freetype) $(libjpeg-turbo) $(libpng) $(libtiff) $(openjpeg) $(libpaper) $(lcms2)
+$(ghostscript)-prereqs = $(fontconfig) $(freetype) $(libjpeg-turbo) $(libpng) $(libtiff) $(openjpeg) $(libpaper) $(lcms2)
 $(ghostscript)-src = $(pkgsrcdir)/$(notdir $($(ghostscript)-srcurl))
 $(ghostscript)-srcdir = $(pkgsrcdir)/$(ghostscript)
 $(ghostscript)-builddir = $($(ghostscript)-srcdir)
