@@ -1,5 +1,7 @@
 * Noteworthy changes in release 0.6.2(2021-04-13)
 
+This release includes lcms2, which is needed by ghostscript.
+
 Upgrade to Slurm 20.02.7.
 
 * Noteworthy changes in release 0.6.1 (2021-04-13)
